--- a/Custom Blocks.tileset.ini
+++ b/Custom Blocks.tileset.ini
@@ -1,5 +1,5 @@
 [tileset]
-rows=3
+rows=5
 cols=7
 name=Custom Blocks
 type=0
@@ -63,3 +63,27 @@ id=988
 
 [item-6-1]
 id=775
+
+[item-0-4]
+id=773
+
+[item-1-3]
+id=767
+
+[item-0-3]
+id=768
+
+[item-2-3]
+id=769
+
+[item-2-4]
+id=771
+
+[item-1-4]
+id=772
+
+[item-3-3]
+id=770
+
+[item-6-2]
+id=987
