added 4-6, 4-hammer3, and fixed the music not playing when going through pipes in the overworld

--- a/Custom smb3.tileset.ini
+++ b/Custom smb3.tileset.ini
@@ -1,5 +1,5 @@
 [tileset]
-rows=8
+rows=9
 cols=8
 name=Custom smb3
 type=2
@@ -192,3 +192,9 @@ id=21
 
 [item-7-7]
 id=10
+
+[item-2-2]
+id=339
+
+[item-0-8]
+id=71
