Added starcoins to 4-4, 4-5, and 4-6

--- a/Custom smb3.tileset.ini
+++ b/Custom smb3.tileset.ini
@@ -59,7 +59,7 @@ id=850
 id=760
 
 [item-4-0]
-id=990
+id=71
 
 [item-4-1]
 id=991
@@ -197,4 +197,7 @@ id=10
 id=339
 
 [item-0-8]
-id=71
+id=990
+
+[item-1-8]
+id=310
