Did a lot of bug fixes

--- a/Custom Blocks.tileset.ini
+++ b/Custom Blocks.tileset.ini
@@ -83,7 +83,7 @@ id=753
 id=751
 
 [item-6-3]
-id=749
+id=757
 
 [item-3-4]
 id=599
@@ -150,3 +150,27 @@ id=16
 
 [item-2-8]
 id=17
+
+[item-3-7]
+id=762
+
+[item-4-7]
+id=774
+
+[item-5-7]
+id=759
+
+[item-6-7]
+id=776
+
+[item-3-8]
+id=777
+
+[item-6-8]
+id=780
+
+[item-5-8]
+id=779
+
+[item-4-8]
+id=778
