Added 5-1 and removed debug text

--- a/block-775.ini
+++ b/block-775.ini
@@ -1,5 +1,5 @@
 [block]
-image = "block-775.png"
+image = "block-775e.png"
 name = "White Star Question Block"
 group = "Super Mario Bros. 3"
 category = "Question Block"
