--- a/Custom BackGrounds.tileset.ini
+++ b/Custom BackGrounds.tileset.ini
@@ -1,5 +1,5 @@
 [tileset]
-rows=3
+rows=7
 cols=3
 name=Custom Backgrounds
 type=1
@@ -15,3 +15,48 @@ id=264
 
 [item-1-1]
 id=265
+
+[item-2-0]
+id=1
+
+[item-0-2]
+id=2
+
+[item-1-2]
+id=3
+
+[item-2-1]
+id=4
+
+[item-2-2]
+id=5
+
+[item-0-3]
+id=6
+
+[item-1-3]
+id=7
+
+[item-2-3]
+id=8
+
+[item-1-4]
+id=10
+
+[item-0-4]
+id=9
+
+[item-2-4]
+id=11
+
+[item-0-5]
+id=12
+
+[item-1-5]
+id=13
+
+[item-2-5]
+id=60
+
+[item-0-6]
+id=61
