--- a/npc-764.ini
+++ b/npc-764.ini
@@ -1,8 +1,9 @@
 [npc]
-name = "Cannonball"
-group = "Super Mario Bros. 3"
-category = "Enemy"
-image = "npc-765.png"
+name = "Pipe Wind"
+group = "Super Mario Maker 2"
+category = "Movement"
+image = "npc-764e.png"
+extra-settings = "npcsettings_windTwister.json"
 gfx-offset-x = 0
 gfx-offset-y = 0
 gfx-width = 32
@@ -14,8 +15,7 @@ grid-offset-x = 0
 grid-offset-y = 0
 frame-style = 0
 frames = 1
-frame-delay = 128
-foreground = 1
+frame-delay = 72
 animation-direction = 0
 animation-bidirectional = 0
 custom-animation = 0
